--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ members = [
     "modules/axlog",
     "modules/axmm",
     "modules/axnet",
-    "modules/axns",
     "modules/axruntime",
     "modules/axsync",
     "modules/axtask",
@@ -64,7 +63,6 @@ axipi = { path = "modules/axipi" }
 axlog = { path = "modules/axlog" }
 axmm = { path = "modules/axmm" }
 axnet = { path = "modules/axnet" }
-axns = { path = "modules/axns" }
 axruntime = { path = "modules/axruntime" }
 axsync = { path = "modules/axsync" }
 axtask = { path = "modules/axtask" }
@@ -107,4 +105,5 @@ log = "0.4"
 memory_addr = "0.4"
 page_table_multiarch = "0.5"
 percpu = "0.2"
+scope-local = "0.1"
 spin = "0.10"
